examples/test/testpolicy14928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14928
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key11: value30
      key32: value17
      key2: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value34
          key42: value11
          key10: value23
